Bug 1388180 - Update the overflow panel styling in Customize Mode and show the overflow button as in the opened state, but with a disabled looking icon. r=Gijs
MozReview-Commit-ID: 387PZ2jp1SS

UltraBlame original commit: c55dbc386e21e056c0990a0821ea5951971c876d

--- a/browser/themes/shared/customizableui/customizeMode.inc.css
+++ b/browser/themes/shared/customizableui/customizeMode.inc.css
@@ -252,7 +252,7 @@ font
 -
 weight
 :
-600
+500
 ;
 font
 -
@@ -3028,6 +3028,96 @@ padding
 -
 box
 ;
+%
+ifdef
+XP_MACOSX
+/
+*
+Native
+styling
+adds
+more
+'
+oompf
+'
+to
+the
+popup
+box
+-
+shadow
+so
+simulate
+that
+*
+as
+best
+as
+we
+can
+here
+:
+*
+/
+border
+:
+1px
+solid
+var
+(
+-
+-
+arrowpanel
+-
+dimmed
+-
+even
+-
+further
+)
+;
+box
+-
+shadow
+:
+0
+4px
+10px
+hsla
+(
+0
+0
+%
+0
+%
+.
+3
+)
+;
+-
+moz
+-
+appearance
+:
+none
+;
+border
+-
+radius
+:
+var
+(
+-
+-
+arrowpanel
+-
+border
+-
+radius
+)
+;
+%
+else
 border
 :
 1px
@@ -3049,7 +3139,7 @@ shadow
 :
 0
 0
-10px
+4px
 hsla
 (
 0
@@ -3059,31 +3149,6 @@ hsla
 %
 .
 2
-)
-;
-%
-ifdef
-XP_MACOSX
--
-moz
--
-appearance
-:
-none
-;
-border
--
-radius
-:
-var
-(
--
--
-arrowpanel
--
-border
--
-radius
 )
 ;
 %
@@ -3113,6 +3178,117 @@ bottom
 :
 -
 1px
+;
+}
+/
+*
+The
+overflow
+button
+icon
+_looks_
+disabled
+but
+is
+also
+shown
+as
+[
+open
+]
+.
+*
+/
+#
+nav
+-
+bar
+[
+customizing
+]
+>
+.
+overflow
+-
+button
+{
+/
+*
+This
+color
+is
+the
+hard
+-
+coded
+#
+4c4c4c
+at
+40
+%
+opacity
+as
+found
+in
+toolbarbutton
+-
+icons
+.
+inc
+.
+css
+*
+/
+fill
+:
+hsla
+(
+0
+0
+%
+30
+%
+.
+4
+)
+;
+}
+#
+nav
+-
+bar
+[
+customizing
+]
+>
+.
+overflow
+-
+button
+>
+.
+toolbarbutton
+-
+icon
+{
+background
+-
+color
+:
+var
+(
+-
+-
+toolbarbutton
+-
+active
+-
+background
+)
+;
+opacity
+:
+1
 ;
 }
 #
@@ -3359,6 +3535,8 @@ thus
 *
 10px
 +
+1
+*
 toolbarbutton
 -
 inner
@@ -3391,14 +3569,14 @@ panel
 container
 has
 a
-25px
+20px
 margin
 so
 that
 leaves
 :
 *
-14px
+19px
 +
 3
 *
@@ -3434,7 +3612,7 @@ end
 :
 calc
 (
-4px
+9px
 +
 3
 *
